--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,11 +35,11 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      # - name: Upload production-ready build files
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: production-files
-      #     path: ./dist
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
