--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  gh-pages:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
@@ -35,16 +35,23 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v3
         with:
           name: production-files
           path: ./dist
 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+        id: deployment
+        uses: actions/deploy-pages@v4
 
 
