added permissions in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
   deploy:
     environment:
-      name: github-pages
+      name: build
       url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
