--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.0",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-locomotive-scroll": "^0.2.2",
+    "tailwind-merge": "^2.6.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
